--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>In Decor</title>
- <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>InDecor</title>
+    <!--css-->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!--googleFont-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!--icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <header id="event-description">
+      <div id="disclaimer">
+        <h2 class="title">InDecor</h2>
+        <p class="about-event">
+          Um evento para revolucionar a sua criatividade
+        </p>
+        <p>Data do evento:</p>
+        <p class="event-date">Domingo, 28 de Maio, a partir das 14h</p>
+      </div>
+      <div id="form">
+        <p>Preencha o formulário para receber os detalhes do evento</p>
+        <form action="">
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <input
+              type="email"
+              name="email"
+              placeholder="Digite o seu email"
+              id=""
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone">Telefone</label>
+            <input
+              type="text"
+              name="phone"
+              placeholder="Digite o seu telrfone"
+              id=""
+            />
+          </div>
+          <div class="form-group">
+            <label for="interest">Principal Interesse</label>
+            <select name="interest">
+              <option value="selecionar" disabled selected>Selecionar</option>
+              <option value="apartment">Apartamentos</option>
+              <option value="houses">Casas</option>
+              <option value="offices">Escritórios</option>
+            </select>
+          </div>
+         <input type="submit" class="btn" value="Enviar"/>
+         
+          <div class="form-group">
+            <label for="privacy-policy">
+              <input type="checkbox" name="privacy-policy" id="" />
+              Aceito os termos de uso e a política de privacidade
+            </label>
+          </div>
+        </form>
+      </div>
+    </header>
+  </body>
 </html>
