--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header id="event-description">
-      <div id="disclaimer">
+      <div id=disclaimer">
         <h2 class="title">InDecor</h2>
         <p class="about-event">
           Um evento para revolucionar a sua criatividade
