--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
          <input type="submit" class="btn" value="Enviar"/>
          
-          <div class="form-group">
+          <div class="form-group privacy">
             <label for="privacy-policy">
               <input type="checkbox" name="privacy-policy" id="" />
               Aceito os termos de uso e a política de privacidade
@@ -70,5 +70,22 @@
         </form>
       </div>
     </header>
+    <section id="key-benefits">
+     <h2>O que você vai aprender</h2>
+     <div class="benefits">
+      <div class="benefit">
+       <div id="benefit1" class="beneift1-img"> </div>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+      </div>
+      <div class="benefit">
+       <div id="benefit1" class="beneift1-img"> </div>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+      </div>
+      <div class="benefit">
+       <div id="benefit1" class="beneift1-img"> </div>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+      </div>
+     </div>
+    </section>
   </body>
 </html>
