--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               <option value="offices">Escritórios</option>
             </select>
           </div>
-         <input type="submit" class="btn" value="Enviar"/>
-         
+          <input type="submit" class="btn" value="Enviar" />
+
           <div class="form-group privacy">
             <label for="privacy-policy">
               <input type="checkbox" name="privacy-policy" id="" />
@@ -71,21 +71,48 @@
       </div>
     </header>
     <section id="key-benefits">
-     <h2>O que você vai aprender</h2>
-     <div class="benefits">
-      <div class="benefit">
-       <div id="benefit1" class="beneift1-img"> </div>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+      <h2>O que você vai aprender</h2>
+      <div class="benefits">
+        <div class="benefit">
+          <div id="benefit1" class="benefit-img"></div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla
+            consectetur perspiciatis.
+          </p>
+        </div>
+        <div class="benefit">
+          <div id="benefit2" class="benefit-img"></div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla
+            consectetur perspiciatis.
+          </p>
+        </div>
+        <div class="benefit">
+          <div id="benefit3" class="benefit-img"></div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla
+            consectetur perspiciatis.
+          </p>
+        </div>
       </div>
-      <div class="benefit">
-       <div id="benefit1" class="beneift1-img"> </div>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+    </section>
+    <section id="location">
+      <div id="address">
+        <i class="bi-geo-alt-fill"></i>
+        <div class="address-details">
+          <p>Rua dos Decoradores, 123 - Centro, São Paulo - SP</p>
+          <p>CEP: 01234-567</p>
+          <p>Telefone: (11) 98765-4321</p>
+          <p>Início: 14:00</p>
+        </div>
       </div>
-      <div class="benefit">
-       <div id="benefit1" class="beneift1-img"> </div>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nulla consectetur perspiciatis.</p>
+      <div id="about-location">
+        <h3>Localização</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          voluptates mollitia quo.
+        </p>
       </div>
-     </div>
     </section>
   </body>
 </html>
