--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <img src="./img/hrz-4.jpg" alt="Sala de jantar">
     </div>
     <div class="detail" id="detail-3">
- <img src="./img/hrz-5.jpg" alt="Sala em tons escuros">
+      <img src="./img/hrz-5.jpg" alt="Sala em tons escuros">
       <div class="detail-description">
-       
+
         <h3>Objetos</h3>
         <ul>
           <li>Cadeiras</li>
@@ -139,9 +139,14 @@
         </ul>
 
       </div>
-      
+
     </div>
   </section>
+  <section class="cta">
+    <h3>Se inscreva no evento</h3>
+    <button class="btn">Enviar Dados</button>
+  </section>
+
 </body>
 
 </html>
